--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,24 +1,9 @@
-# development:
-#   adapter: async
-#
-# test:
-#   adapter: async
-#
-# production:
-#   adapter: redis
-#   url: redis://localhost:6379/1
+development:
+  adapter: async
 
-development: &development
-  :url: redis://localhost:6379
-  :host: localhost
-  :port: 6379
-  :timeout: 1
-  :inline: true
-test: *development
-production: &production
-  :url: redis://redistogo:d394489a1fa54907714948ab886ceffc@koi.redistogo.com:11957
-  :host: koi.redistogo.com
-  :port: 10272
-  :password: d394489a1fa54907714948ab886ceffc
-  :inline: true
-  :timeout: 1
+test:
+  adapter: async
+
+production:
+  adapter: redis
+  url: redis://redistogo:d394489a1fa54907714948ab886ceffc@koi.redistogo.com:11957/
